--- a/.github/workflows/activate.yml
+++ b/.github/workflows/activate.yml
@@ -2,8 +2,7 @@ name: Activate License
 
 on:
   push:
-    branches-ignore:
-      - '**'
+    branches: [master]
 
 jobs:
   activation:
@@ -15,7 +14,7 @@ jobs:
         id: getManualLicenseFile
         uses: webbertakken/unity-request-manual-activation-file@v1.1
         with:
-          unityVersion: 2019.2.17f1
+          unityVersion: 2019.3.6f1
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
