update Firebase Deploy workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           unityVersion: 2019.3.6f1
           targetPlatform: WebGL
+          versioning: None
 
       - name: Upload Artifact
         uses: actions/upload-artifact@main
