--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 12
 
-      - run: node check
+      - run: node version
 
       - uses: actions/cache@main
         with:
