--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: [self-hosted, linux, x64]
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@main
@@ -38,7 +38,7 @@ jobs:
 
   deploy:
     name: Deploy
-    runs-on: [self-hosted, linux, x64]
+    runs-on: ubuntu-latest
 
     needs: build
 
