--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run: node version
 
-      - uses: actions/cache@main
+      - uses: actions/cache@v1.2.0
         with:
           path: Library
           key: Library
