update Firebase Deploy workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           path: Library
           key: Library
 
-      - uses: webbertakken/unity-builder@master
+      - uses: webbertakken/unity-builder@main
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
