--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
 
       - run: node version
 
-      - uses: actions/cache@v1.2.0
+      - uses: actions/cache@v2
         with:
           path: Library
-          key: Library
+          key: lib
 
       - uses: webbertakken/unity-builder@main
         env:
